[project]
name = "nif"
version = "0.2.0"
description = "NIF: Neural Imaging Format (ACMMM 2023)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brotli>=1.1.0",
    "numpy>=2.2.4",
    "pytorch-msssim>=1.0.0",
    "pyyaml>=6.0.2",
    "reprounzip>=1.3",
    "reprozip>=1.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
